--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <body>
-    Hello there, awesome person!
-    </html>>
-  </body>
+    <head>
+        <title>Awesome Page</title>
+    </head>
+
+    <body>
+        Hello world welcome to my website! Thanks for visting!
+    </body>
+</html>
