--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
         <title>Awesome Page</title>
     </head>
-    <h> Hello </h>
+    
     <body>
+        <h>Enjoy</h>
         Hello world welcome to my website! Thanks for visting!
     </body>
 </html>
