--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
         <title>Awesome Page</title>
     </head>
 
-    <body>
-        <h>hello</h>  
-        Hello world welcome to my website! Thanks for visting!
+    <body>       
+        <h1>MY webpage</h1>
     </body>
 </html>
