--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
         <title>Awesome Page</title>
     </head>
 
-    <body>       
-        <h1>MY webpage</h1>
-        hello people
+    <body>
+        <h1> hello people </h1>
     </body>
 </html>
