--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
     <body>
         <h1> hello people </h1>
-        <img src=https://avatars0.githubusercontent.com/u/43839215?v=4>
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
